--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Lisa Beauty Saloon Project">
+  <meta name="description" content="Lisa Beauty salon Project">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="lisa_beauty_saloon">
+  <meta name="apple-mobile-web-app-title" content="lisa_beauty_salon">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>lisa_beauty_saloon</title>
+  <title>lisa_beauty_salon</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
